<resources>
    <string name="app_name">App Movie Coders</string>

    <!--Log In -->
    <string name="title_log_in_activity">Log In</string>
    <string name="hint_log_in_username">Username</string>
    <string name="hint_log_in_password">Password</string>
    <string name="text_button_login">Login</string>

    <!-- Movie detail -->
    <string name="title_movie_detail_activity">Movie Detail</string>
    <string name="text_movie_detail_vote_average">Average vote: %1$s</string>

    <!-- Credit detail -->
    <string name="title_credit_detail_activity">Credit Detail</string>

    <!-- Descriptions -->
    <string name="content_description_credit_detail_photo">Credit detail photo</string>
    <string name="content_description_credit_thumbnail">Credit thumbnail</string>
    <string name="content_description_log_in_logo">Log in logo image</string>
    <string name="content_description_movie_detail_poster_item">Movie detail poster item</string>
    <string name="content_description_movie_poster_item">Movie poster item</string>
    <string name="content_description_password_toggle_icon">Password toggle icon</string>
    <string name="content_description_trailer_play_button">Trailer play button</string>
    <string name="content_description_trailer_thumbnail">Trailer thumbnail</string>
    <string name="content_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Message Errors -->
    <string name="label_no_available_data">No available data for the moment.</string>

    <!-- Menu labels -->
    <string name="menu_movie_highest_rated">Highest Rated</string>
    <string name="menu_movie_most_popular">Most Popular</string>
    <string name="menu_movie_favorites">Favorites</string>
    <string name="menu_movie_in_theaters">In Theaters</string>
    <string name="menu_movie_sort_by">Sort by</string>

    <!-- Sections -->
    <string name="section_synopsis">Synopsis</string>
    <string name="section_certification">Certification</string>
    <string name="section_duration">Duration</string>
    <string name="section_rating">Rating</string>
    <string name="section_release_date">Release Date</string>
    <string name="section_keywords">Keywords</string>
    <string name="section_credits">Credits</string>
    <string name="section_trailers">Trailers</string>
    <string name="section_reviews">Reviews</string>
    <string name="section_related_movies_by_credit">Related movies</string>

    <!-- Errors -->
    <string name="error_during_fetching_credits">Error occurred during fetching keywords!</string>
    <string name="error_during_fetching_keywords">Error occurred during fetching keywords!</string>
    <string name="error_during_fetching_movies">Error occurred during fetching movies!</string>
    <string name="error_during_fetching_person">Error occurred during fetching person!</string>
    <string name="error_during_fetching_reviews">Error occurred during fetching reviews!</string>
    <string name="error_during_fetching_trailers">Error occurred during fetching trailers!</string>
    <string name="error_log_in">Error occurred during log in!</string>
    <string name="error_not_available">Not available</string>
    <string name="error_unable_to_fetch_credits">Unable to fetch credits!</string>
    <string name="error_unable_to_fetch_keywords">Unable to fetch keywords!</string>
    <string name="error_unable_to_fetch_movies">Unable to fetch movies!</string>
    <string name="error_unable_to_fetch_person">Unable to fetch person!</string>
    <string name="error_unable_to_fetch_reviews">Unable to fetch reviews!</string>
    <string name="error_unable_to_fetch_trailers">Unable to fetch trailers!</string>

    <!-- Options -->
    <string name="option_see_less">See less</string>
    <string name="option_see_more">See more</string>
</resources>
