<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_sort_by"
            android:icon="@drawable/ic_sort"
            android:title="@string/menu_movie_sort_by"
            app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/menu_movie_favorites"
                        android:title="@string/menu_movie_favorites" />
                <item
                        android:id="@+id/menu_movie_most_popular"
                        android:title="@string/menu_movie_most_popular" />
                <item
                        android:id="@+id/menu_movie_highest_rated"
                        android:title="@string/menu_movie_highest_rated" />
            </group>
        </menu>
    </item>

</menu>