<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewmodel"
                type="com.mho.training.features.persondetail.PersonDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/personDetailPhotoImageView"
                            android:layout_width="@dimen/credit_detail_width"
                            android:layout_height="@dimen/credit_detail_height"
                            android:contentDescription="@string/content_description_credit_detail_photo"
                            app:circularPhoto="@{viewmodel.infoPerson.profilePath}"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/ic_camera" />

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintLeft_toRightOf="@+id/personDetailPhotoImageView"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/personDetailPhotoImageView"
                            app:layout_constraintTop_toTopOf="@+id/personDetailPhotoImageView">

                        <ProgressBar
                                android:layout_width="@dimen/progress_bar_detail_width"
                                android:layout_height="@dimen/progress_bar_detail_height"
                                android:layout_gravity="center"
                                app:visible="@{viewmodel.loadingPerson}"/>

                        <TextView
                                style="@style/PersonDetailTitleStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.infoPerson.name}"
                                tools:text="Person name" />

                        <TextView
                                style="@style/PersonDetailContentStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@{viewmodel.infoPerson.name}"
                                tools:text="Actor" />

                        <TextView
                                style="@style/PersonDetailContentStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@{viewmodel.infoPerson.birthdayInformation}"
                                tools:text="Birthday" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:visible="@{viewmodel.hasPersonInformation}">

                    <TextView
                            style="@style/PersonDetailBodyStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="@{viewmodel.maxLines}"
                            android:text="@{viewmodel.infoPerson.biography}"
                            tools:text="@string/content_lorem_ipsum" />

                    <TextView
                            style="@style/CreditBiographyContentOptionStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:padding="4dp"
                            android:text="@string/option_see_more"
                            android:onClick="@{() -> viewmodel.showMoreBiography()}"
                            app:visible="@{viewmodel.showMoreBiography}"
                            tools:visibility="visible"/>

                    <TextView
                            style="@style/CreditBiographyContentOptionStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:padding="4dp"
                            android:text="@string/option_see_less"
                            android:onClick="@{() -> viewmodel.showLessBiography()}"
                            app:visible="@{!viewmodel.showMoreBiography}"
                            tools:visibility="visible"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            style="@style/MovieDetailTitleStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/section_related_movies_by_credit" />

                    <ProgressBar
                            android:layout_width="@dimen/progress_bar_detail_width"
                            android:layout_height="@dimen/progress_bar_detail_height"
                            android:layout_gravity="center"
                            app:visible="@{viewmodel.loadingPerson}"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvMovieList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:spanCount="3"
                            app:itemsList="@{viewmodel.movies}"
                            tools:listitem="@layout/item_linear_movie" />

                    <TextView
                            style="@style/MovieDetailInfoError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/error_not_available"
                            app:visible="@{viewmodel.hasNotMovies}"
                            tools:visibility="visible"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>